@@ -1,4 +1,4 @@
-$Id: README 46228 2018-01-05 23:02:24Z karl $
+$Id: README 46966 2018-03-14 23:01:23Z karl $
 Public domain.  Originally written 2005 by Karl Berry.
 
 For a high-level overview of building TeX Live, see
@@ -29,14 +29,14 @@ Build information for some of the platforms.
 aarch64-linux:
   aarch64 Debian GNU/Linux 9 (stretch)
   gcc (Debian 6.3.0-18) 6.3.0 20170516
-  ./Build --enable-xindy --without-x --enable-arm-neon=check
-    with the libpng-1.6.34 source directory copied over from SVN -r45971
-    (where it has been reconfigured to expose --enable-arm-neon)
+  ./Build --enable-arm-neon=check
 
 amd64-netbsd:
   gcc version 4.5.3 (NetBSD nb2 20110806)
   NetBSD/amd64 6.1.3
-  TL_MAKE=gmake LDFLAGS='-L/usr/X11R7/lib -Wl,-rpath,/usr/X11R7/lib' ./Build
+  TL_MAKE=gmake CC=gcc CXX=g++ CFLAGS=-D_NETBSD_SOURCE \
+  LDFLAGS='-L/usr/X11R7/lib -Wl,-rpath,/usr/X11R7/lib' \
+  ./Build --enable-xindy CLISP=/usr/local/bin/clisp
   
 i386-freebsd, amd64-freebsd:
   --disable-dvisvgm; upmendex for i386 built with -DU_IS_BIG_ENDIAN=0.
@@ -75,4 +75,10 @@ x86_64-darwinlegacy, i386-darwin, powerpc-darwin:
     but will only be used for < 10.10 since x86_64-darwin covers newer.
   PPC binaries made with gcc-4.2 and Intel binaries with clang-3.7.
 
-x86_64-linux: Debian 6.0 (Squeeze), Feb 2009.
+x86_64-linux: Debian 8.0 (Jessie), Apr 2015.
+
+x86_64-linuxmusl:
+  Alpine 3.1 Docker image with musl libc 1.1.5
+  Binaries are taken from the CI testing on travis-ci, see the
+  source/.travis.yaml file for details on how to build.
+
